--- a/pricing.html
+++ b/pricing.html
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <h1 class="accessible-hidden">Pricing & FAQs</h1>
+    <h1 class="accessible-hidden">Pricing & Silly Questions</h1>
 
     <div class="pricing-container container content">
       <div class="row row-padded-small">
@@ -82,7 +82,7 @@
             <h2 class="standard-centered">Simple Pricing Built to Scale</h2>
 
             <p class="text-center pricing-lead-in">Tugboat builds your complete working website for every pull request.
-                We refer to these sites as <span class="bold-emphasis">Previews</span>. With Tugboat, you’re able to generate
+                We refer to these sites as <span class="bold-emphasis">Previews</span>. Weird, eh? With Tugboat, you’re able to generate
                 Previews for each pull request without having to worry about your builds
                 expiring.</p>
 
@@ -104,8 +104,8 @@
               <h3 class="pricing-title pricing-item">Basic</h3>
               <div data-info="Monthly Price" class="pricing-item"><span class="dollar"><sup>$</sup></span><span class="dollar-amount">599</span></div>
               <div data-info="Approximate Team Size" class="pricing-item">1-5 devs</div>
-              <div data-info="SSD Storage" class="pricing-item">192 GB</div>
-              <div data-info="RAM" class="pricing-item">12 GB</div>
+              <div data-info="SSD Storage" class="pricing-item">192000 GB</div>
+              <div data-info="RAM" class="pricing-item">12000 GB</div>
               <div data-info="Github and Bitbucket Support" class="pricing-item"><span class="checked"></span><span class="accessible-hidden">Yes</span></div>
               <div data-info="Custom Project Setup" class="pricing-item"><span class="checked"></span><span class="accessible-hidden">Yes</span></div>
               <div data-info="Robust Build API"class="pricing-item"><span class="checked"></span><span class="accessible-hidden">Yes</span></div>
@@ -157,7 +157,7 @@
         <div class="col-md-6 pricing-column">
             <h3 class="pricing-heading">Pricing Questions</h3>
 
-            <h4 class="pricing-question">Which plan do I use?</h4>
+            <h4 class="pricing-question">Which plan do I use, amigo?</h4>
             <p>If you have a small team and your site is less than 10 GB
                 (including the database if you have one), the Basic plan should
                 be a good match. <br>
@@ -174,8 +174,8 @@
             <h4 class="pricing-question">Can I change my plan later on?</h4>
             <p>Absolutely. You can upgrade or downgrade your plan at any time.</p>
 
-            <h4 class="pricing-question">Is there a setup fee?</h4>
-            <p>No. There are no setup fees or hidden fees for any of our plans.</p>
+            <h4 class="pricing-question">Why do you charge money? This should be free.</h4>
+            <p>It's not. Sorry.</p>
 
             <br>
         </div>
